[Tab UI] Fix bugs and safety checks in TabListMediator
This change addresses multiple minor bugs, safety issues, and dead code
in TabListMediator:
* Fixes inverted metric recording in multi-select mode so selecting and
  deselecting record the correct action metrics.
* Standardizes index bounds checks using isValidIndex() across tab
  selection, undo, update, swipe reset, and tab closure callbacks.
* Passes the configured selection limit directly to showLimitSnackbar()
  instead of hardcoding a fallback value.
* Removes the unused selectedTabId() helper method and unused mNextTabId
  field.
* Removes the unused Tab parameter from updateDescriptionString(),
  eliminating an unsafe assertion in forAllTabListItems().
* Adds a null check in quick delete animation tab filtering to prevent a
  potential NullPointerException.
* Removes the unused fromActionButton parameter from onTabSelecting().
* Removes the unused getRecyclerViewRect() method from
  TabSwitcherPaneCoordinator.
* Refactors unit tests to use class-level @Mock fields, replaces
  doReturn() with when(), replaces Arrays.asList() with List.of(), etc.

Bug: 509226293
Change-Id: I1c3417a341f1732183c45ccc8d2cb553d0964849
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/8263024
Commit-Queue: Gazal Agarwal <agazal@google.com>
Auto-Submit: Gazal Agarwal <agazal@google.com>
Reviewed-by: Calder Kitagawa <ckitagawa@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1680838}